# niwrap-python

./: README.md  index.txt  pyproject.toml  requirements.txt  requirements_remote.txt
niwrap/: README.md  __init__.py  pyproject.toml
niwrap/src/niwrap/: __init__.py
niwrap_afni/: README.md  pyproject.toml
niwrap_afni/src/afni/: adjunct_select_str_py.py  adjunct_suma_fs_mask_and_qc.py  adwarp.py  apqc_make_html_py.py  balloon.py  bayes_view.py  bayesian_group_ana_py.py  brain_skin.py  build_afni_py.py  ccalc.py  cifti_tool.py  cjpeg.py  clust_exp_stat_parse_py.py  convert_dset.py  convert_surface.py  dimon.py  djpeg.py  fat_mat2d_plot_py.py  fat_mvm_gridconv_py.py  fat_mvm_scripter_py.py  fat_proc_align_anat_pair.py  fat_proc_convert_dcm_dwis.py  fat_proc_decmap.py  fat_proc_dwi_to_dt.py  fat_proc_imit2w_from_t1w.py  fat_roi_row_py.py  fdrval.py  fftest.py  gen_epi_review_py.py  help_format.py  imdump.py  init_user_dotfiles_py.py  iso_surface.py  make_random_timing_py.py  map_track_id.py  mba.py  prompt_popup.py  prompt_user.py  qdelaunay.py  qhull.py  (+133 more)
niwrap_afni/src/niwrap_afni/afni/: __init__.py  abids_json_info_py.py  abids_json_tool_py.py  abids_tool.py  abids_tool_py.py  adjunct_apqc_tsnr_general.py  adjunct_aw_tableize_roi_info_py.py  adjunct_calc_mont_dims_py.py  adjunct_combine_str_py.py  adjunct_is_label_py.py  adjunct_make_script_and_rst_py.py  adjunct_select_str_py.py  adjunct_simplify_cost.py  adjunct_simplify_cost_py.py  adjunct_suma_fs_mask_and_qc.py  adjunct_suma_fs_roi_info.py  adjunct_tort_plot_dp_align.py  adwarp.py  afni.py  afni_batch_r.py  afni_check_omp.py  afni_history.py  afni_open.py  afni_proc_py.py  afni_run_r.py  afni_system_check_py.py  aiv.py  align_epi_anat.py  align_epi_anat_py.py  analyze_trace.py  ap_run_simple_rest.py  ap_run_simple_rest_tcsh.py  apqc_make_html.py  apqc_make_html_py.py  apqc_make_tcsh_py.py  apsearch.py  auto_warp_py.py  balloon.py  bayes_view.py  bayesian_group_ana_py.py  (+544 more)
niwrap_ants/: README.md  pyproject.toml
niwrap_ants/src/ants/: __init__.py  add_noise_to_image.py  ants_align_origin.py  ants_apply_transforms.py  ants_brain_extraction_sh.py  ants_intermodality_intrasubject_sh.py  ants_joint_label_fusion_sh.py  ants_neuroimaging_battery.py  ants_slice_regularized_registration.py  ants_transform_info.py  antsintegrate_vector_field.py  antsjacobian.py  antsuse_landmark_images_to_get_affine_transform.py  convert_scalar_image_to_rgb.py  create_displacement_field.py  create_dticohort.py  create_warped_grid_image.py  denoise_image.py  image_intensity_statistics.py  kelly_kapowski.py  non_local_super_resolution.py  resample_image.py  sccan.py  warp_tensor_image_multi_transform.py  warp_time_series_image_multi_transform.py
niwrap_ants/src/niwrap_ants/ants/: __init__.py  add_noise_to_image.py  ants_ai.py  ants_align_origin.py  ants_apply_transforms.py  ants_apply_transforms_to_points.py  ants_atropos_n4_sh.py  ants_brain_extraction_sh.py  ants_cortical_thickness_sh.py  ants_intermodality_intrasubject_sh.py  ants_introduction_sh.py  ants_joint_fusion.py  ants_joint_label_fusion_sh.py  (+60 more)
niwrap_c3d/: README.md  pyproject.toml
niwrap_c3d/src/c3d/: __init__.py  c4d.py
niwrap_dcm2niix/: README.md  pyproject.toml
niwrap_freesurfer/: README.md  pyproject.toml
niwrap_freesurfer/src/freesurfer/: analyzeto4dfp.py  ants_n4_bias_field_correction_fs.py  aparc_stats_aseg.py  aparcstatsdiff.py  apas2aseg.py  aseg2feat.py  asegstats2table.py  bmedits2surf.py  browse_minc_header_tcl.py  compute_vox2vox.py  connected_components.py  cor_to_minc.py  dcmdrle_fs.py  defect2seg.py  dicom_rename.py  dmri_extract_surface_measurements.py  dmri_forrest.py  dmri_motion.py  dmri_neighboring_regions.py  dmri_paths.py  dmri_train.py  dmri_violin_plots.py  dt_recon.py  feat2segstats.py  fix_subject_corrected.py  fix_subject_corrected_rh.py  fix_subject_rh.py  fixup_mni_paths.py  fs_install_mcr.py  fs_spmreg_glnxa64.py  fs_tutorial_data.py  fsl_5_0_2_xyztrans_sch.py  fsl_sub_mgh.py  fsr_import.py  fvcompare.py  gems_compute_atlas_probs.py  groupstats.py  groupstatsdiff.py  gtmseg.py  hiam_make_template.py  (+142 more)
niwrap_fsl/: README.md  pyproject.toml
niwrap_fsl/src/fsl/: asl_file.py  asl_mfree.py  avscale.py  bet.py  betsurf.py  bianca.py  bianca_cluster_stats.py  calc_grad_perc_dev.py  cluster2html.py  convertwarp.py  dtifit.py  dtigen.py  eddy_combine.py  eddy_correct.py  eddy_cuda9_1.py  eddy_openmp.py  fabber.py  fabber_cest.py  fabber_dce.py  fabber_dualecho.py  fast.py  fdr.py  feat_gm_prepare.py  filmbabe.py  first_mult_bcorr.py  first_utils.py  fsl_deface.py  fsl_ents.py  fsl_mvlm.py  fsl_prepare_fieldmap.py  fsl_sbca.py  fsl_sub.py  fslascii2img.py  fslcc.py  fslinfo.py  fslinterleave.py  fslmodhd.py  fslorient.py  fslselectvols.py  fslswapdim.py  (+26 more)
niwrap_greedy/: README.md  pyproject.toml
niwrap_mrtrix3tissue/: README.md  pyproject.toml
niwrap_mrtrix3tissue/src/mrtrix3tissue/: __init__.py  ss3t_csd_beta1.py
niwrap_niftyreg/: README.md  pyproject.toml
niwrap_niftyreg/src/niftyreg/: __init__.py  reg_f3d.py  reg_jacobian.py
niwrap_workbench/: README.md  pyproject.toml
niwrap_workbench/src/workbench/: __init__.py  annotation_resample.py  backend_average_dense_roi.py  border_to_vertices.py  cifti_all_labels_to_rois.py  cifti_average.py  cifti_average_roi_correlation.py  cifti_correlation.py  cifti_false_correlation.py  cifti_label_import.py  cifti_label_probability.py  cifti_label_to_roi.py  cifti_math.py  cifti_parcel_mapping_to_label.py  cifti_parcellate.py  cifti_roi_average.py  cifti_rois_from_extrema.py  cifti_separate.py  cifti_stats.py  cifti_vector_operation.py  convert_matrix4_to_workbench_sparse.py  gifti_all_labels_to_rois.py  label_probability.py  label_resample.py  metric_convert.py  metric_dilate.py  metric_fill_holes.py  metric_find_clusters.py  metric_label_import.py  metric_merge.py  metric_reduce.py  metric_regression.py  metric_remove_islands.py  metric_resample.py  metric_rois_to_border.py  metric_vector_toward_roi.py  metric_weighted_stats.py  set_map_names.py  set_structure.py  signed_distance_to_surface.py  (+23 more)
(+1676 files in other folders)
