[project]
name = "niwrap"
version = "0.1.0"
description = "Neuroimaging python wrappers"
readme = "README.md"
license = "LGPL-2.1"
authors = [{ name = "Child Mind Institute", email = "cmi-dair@childmind.org" }]
requires-python = ">=3.10"
dependencies = [
    "styxdefs>=0.5.0",
    "niwrap-afni",
    "niwrap-ants",
    "niwrap-c3d",
    "niwrap-dcm2niix",
    "niwrap-fastsurfer",
    "niwrap-freesurfer",
    "niwrap-fsl",
    "niwrap-greedy",
    "niwrap-mrtrix",
    "niwrap-mrtrix3tissue",
    "niwrap-niftyreg",
    "niwrap-workbench",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
source = ["niwrap/"]

[tool.uv.sources]
niwrap-afni = { workspace = true }
niwrap-ants = { workspace = true }
niwrap-c3d = { workspace = true }
niwrap-dcm2niix = { workspace = true }
niwrap-fastsurfer = { workspace = true }
niwrap-freesurfer = { workspace = true }
niwrap-fsl = { workspace = true }
niwrap-greedy = { workspace = true }
niwrap-mrtrix = { workspace = true }
niwrap-mrtrix3tissue = { workspace = true }
niwrap-niftyreg = { workspace = true }
niwrap-workbench = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
