[project]
name = "niwrap"
version = "0.1.0"
description = "Neuroimaging python wrappers"
readme = "README.md"
license = "LGPL-2.1"
authors = [{ name = "Child Mind Institute", email = "cmi-dair@childmind.org" }]
requires-python = ">=3.10"
dependencies = [
    "styxdefs>=0.5.0",
    "niwrap-afni",
    "niwrap-ants",
    "niwrap-c3d",
    "niwrap-dcm2niix",
    "niwrap-fastsurfer",
    "niwrap-freesurfer",
    "niwrap-fsl",
    "niwrap-greedy",
    "niwrap-mrtrix",
    "niwrap-mrtrix3tissue",
    "niwrap-niftyreg",
    "niwrap-workbench",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "ruff>=0.9.9"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
source = ["niwrap/"]

[tool.uv.sources]
niwrap-afni = { workspace = true }
niwrap-ants = { workspace = true }
niwrap-c3d = { workspace = true }
niwrap-dcm2niix = { workspace = true }
niwrap-fastsurfer = { workspace = true }
niwrap-freesurfer = { workspace = true }
niwrap-fsl = { workspace = true }
niwrap-greedy = { workspace = true }
niwrap-mrtrix = { workspace = true }
niwrap-mrtrix3tissue = { workspace = true }
niwrap-niftyreg = { workspace = true }
niwrap-workbench = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["niwrap"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = [
    "ANN003", # **kwargs should not be annotated.
    "ANN401",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
