[project]
name = "niwrap"
version = "0.6.3"
description = "Neuroimaging wrappers."
readme = "README.md"
license = "MIT"
authors = [{ name = "CMI DAIR" }]
requires-python = ">=3.10"
dependencies = [
  "styxdocker",
  "styxsingularity",
  "styxgraph",
  "mrtrix",
  "mrtrix3tissue",
  "greedy",
  "c3d",
  "niftyreg",
  "afni",
  "fastsurfer",
  "dcm2niix",
  "freesurfer",
  "fsl",
  "workbench",
  "ants",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"