[project]
name = "niwrap"
version = "0.6.3"
description = "Neuroimaging wrappers."
readme = "README.md"
license = "MIT"
authors = [{ name = "CMI DAIR" }]
requires-python = ">=3.10"
dependencies = [
  "styxdocker",
  "styxsingularity",
  "styxgraph",
  "niwrap_mrtrix",
  "niwrap_mrtrix3tissue",
  "niwrap_greedy",
  "niwrap_c3d",
  "niwrap_niftyreg",
  "niwrap_afni",
  "niwrap_fastsurfer",
  "niwrap_dcm2niix",
  "niwrap_freesurfer",
  "niwrap_fsl",
  "niwrap_workbench",
  "niwrap_ants",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"