[project]
name = "niwrap"
version = "0.7.0"
description = "Neuroimaging wrappers."
readme = "README.md"
license = "MIT"
authors = [{ name = "CMI DAIR" }]
requires-python = ">=3.10"
dependencies = [
  "styxdocker",
  "styxsingularity",
  "styxgraph",
  "niwrap_freesurfer",
  "niwrap_mrtrix3tissue",
  "niwrap_afni",
  "niwrap_c3d",
  "niwrap_mrtrix",
  "niwrap_workbench",
  "niwrap_dcm2niix",
  "niwrap_ants",
  "niwrap_fastsurfer",
  "niwrap_fsl",
  "niwrap_greedy",
  "niwrap_niftyreg",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"