[project]
name = "niwrap_ants"
version = "0.6.3"
description = "NiWrap wrappers for ANTs."
license = "LGPL-2.1"
authors = [{ name = "CMI DAIR", email = "dair@childmind.org" }]
requires-python = ">=3.10"
dependencies = [
    "styxdefs~=0.5.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/niwrap_ants"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"