[project]
name = "niwrap_freesurfer"
version = "0.6.3"
description = "NiWrap wrappers for FreeSurfer."
license = "LGPL-2.1"
authors = [{ name = "CMI DAIR", email = "dair@childmind.org" }]
requires-python = ">=3.10"
dependencies = [
    "styxdefs~=0.5.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/niwrap_freesurfer"]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"