[project]
name = "niwrap_mrtrix3tissue"
version = "0.6.3"
description = "NiWrap wrappers for MRTrix3Tissue."
license = "LGPL-2.1"
authors = [{ name = "CMI DAIR", email = "dair@childmind.org" }]
requires-python = ">=3.10"
dependencies = [
    "styxdefs~=0.5.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/niwrap_mrtrix3tissue"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"